--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            background: #3a01ab;
+            background: black;
             color: white;
             display: flex;
             justify-content: center;
