--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                     <p>Comprehensive security solutions to protect your digital assets and ensure compliance.</p>
                                 </div>-->
 
-                <div class="service-card">
+                <!--<div class="service-card">
                     <div class="service-icon">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon>
@@ -144,7 +144,7 @@
                     </div>
                     <h3>DevOps & Automation</h3>
                     <p>Streamline your development pipeline with CI/CD, automation, and infrastructure optimization.</p>
-                </div>
+                </div>-->
             </div>
         </div>
     </section>
@@ -158,13 +158,11 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-category">Web Development</div>
-                    <h3>E-Commerce Platform</h3>
-                    <p>A comprehensive e-commerce solution with advanced features and seamless user experience.</p>
+                    <h3>WordPress & Plugin Development</h3>
+                    <p>Professional WordPress websites with custom themes, plugins, and seamless integrations to boost your online presence.</p>
                     <div class="project-tags">
-                        <span class="tag">React</span>
-                        <span class="tag">Node.js</span>
-                        <span class="tag">MongoDB</span>
-                        <span class="tag">AWS</span>
+                        <span class="tag">Wordpress</span>
+                        <span class="tag">Wordpress Plugin</span>
                     </div>
                 </div>
 
@@ -173,58 +171,22 @@
                     <h3>Healthcare Management System</h3>
                     <p>Digital transformation solution for healthcare providers with patient management and analytics.</p>
                     <div class="project-tags">
-                        <span class="tag">Vue.js</span>
-                        <span class="tag">Python</span>
-                        <span class="tag">PostgreSQL</span>
-                        <span class="tag">Docker</span>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-category">FinTech</div>
-                    <h3>Financial Trading App</h3>
-                    <p>Real-time trading platform with advanced analytics and secure transaction processing.</p>
-                    <div class="project-tags">
-                        <span class="tag">React Native</span>
-                        <span class="tag">Java</span>
-                        <span class="tag">Redis</span>
-                        <span class="tag">Kubernetes</span>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-category">Enterprise</div>
-                    <h3>IoT Monitoring Dashboard</h3>
-                    <p>Real-time monitoring and control system for IoT devices with predictive analytics.</p>
-                    <div class="project-tags">
-                        <span class="tag">Angular</span>
-                        <span class="tag">C#</span>
-                        <span class="tag">InfluxDB</span>
-                        <span class="tag">Azure</span>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-category">AI/ML</div>
-                    <h3>AI-Powered Analytics</h3>
-                    <p>Machine learning platform for predictive analytics and intelligent business insights.</p>
-                    <div class="project-tags">
-                        <span class="tag">Python</span>
-                        <span class="tag">TensorFlow</span>
-                        <span class="tag">Spark</span>
-                        <span class="tag">GCP</span>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-category">Logistics</div>
-                    <h3>Supply Chain Management</h3>
-                    <p>End-to-end supply chain visibility and optimization platform for global operations.</p>
-                    <div class="project-tags">
-                        <span class="tag">React</span>
-                        <span class="tag">Node.js</span>
+                        <span class="tag">Laravel</span>
+                        <span class="tag">HTML, CSS</span>
+                        <span class="tag">Bootstarp</span>
                         <span class="tag">MySQL</span>
-                        <span class="tag">Microservices</span>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-category">Retail</div>
+                    <h3>Inventory Management System with POS</h3>
+                    <p>Comprehensive solution for managing inventory, sales, and point-of-sale operations with real-time stock tracking and reporting.</p>
+                    <div class="project-tags">
+                        <span class="tag">NextJs</span>
+                        <span class="tag">Springboot</span>
+                        <span class="tag">Tailwind Css</span>
+                        <span class="tag">MySQL</span>
                     </div>
                 </div>
             </div>
